[gd_scene load_steps=3 format=3 uid="uid://s5pi35ka3opg"]

[ext_resource type="Script" path="res://scripts/ui/poke_panel.gd" id="1_a1d0b"]
[ext_resource type="Texture2D" uid="uid://d0mfg0khmohhj" path="res://images/pokemon/charizard.png" id="1_pmys3"]

[node name="PokePanel" type="ColorRect"]
custom_minimum_size = Vector2(520, 150)
offset_right = 520.0
offset_bottom = 150.0
color = Color(0.706626, 0.757801, 0.761879, 1)
script = ExtResource("1_a1d0b")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Charizard"

[node name="HPBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EnergyBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HappinessBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Level" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Lvl.1"

[node name="Nature" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(72, 40)
texture = ExtResource("1_pmys3")
